2024-06-07T01:02:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9409980017 # 319
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-07
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 922 1676 / 937 1691
* notice: next accum: outdated-unq outdated-all / unq all: 923 1677 / 937 1691
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-23] / []

2024-06-06T00:59:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9393399497 # 318
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-06
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 921 1673 / 936 1690
* notice: next accum: outdated-unq outdated-all / unq all: 922 1676 / 937 1691
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-22] / [2024-06-05]

2024-06-05T01:00:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9376441853 # 317
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 921 1673 / 935 1689
* notice: next accum: outdated-unq outdated-all / unq all: 921 1673 / 936 1690
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-22 2024-06-04]

2024-06-04T01:00:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9359470367 # 316