@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-07T01:02:31Z",
-  "count_outdated" : 1677,
-  "uniques_outdated" : 923,
+  "timestamp" : "2024-06-08T01:00:10Z",
+  "count_outdated" : 1678,
+  "uniques_outdated" : 924,
   "count" : 1691,
   "uniques" : 937,
   "clones" : [
-    {
-      "timestamp": "2024-05-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-25T00:00:00Z",
       "count": 1,
