@@ -1,12 +1,7 @@
 {
-  "count": 14,
+  "count": 13,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2024-05-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-25T00:00:00Z",
       "count": 1,
